[package]
name = "driver_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
